<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.timschneeberger.rootlessjamesdsp.activity.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:contentDescription="@string/action_settings"
        android:iconTint="?attr/actionMenuTextColor"
        android:icon="@drawable/ic_twotone_settings_24dp"
        app:showAsAction="always" />
</menu>
